# WHOip

./: Dockerfile  LICENSE  README.md  WHOip  output.json  pyproject.toml  requirements.txt  setup.cfg  whoip.py
.github/workflows/: ci.yml  release.yml
web/ui/: app.js  index.html  style.css
